--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dash-html-components==1.1.3
 dash-renderer==1.9.1
 dash-table==4.11.3
 gunicorn==20.1.0
+imbalanced-learn==0.8.0
 numpy==1.19.5
 pandas==1.1.5
 plotly==5.1.0
